// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should match the snapshot 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  >
    Test text
  </p>
</DocumentFragment>
`;

exports[`Text should match the snapshot when no margin is applied 1`] = `
<DocumentFragment>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1wczmbf-MuiTypography-root"
  >
    Test text
  </p>
</DocumentFragment>
`;
